@@ -251,6 +251,7 @@ $lang['help_template_owner'] = 'You may change the authorized &quot;owner&quot; 
 $lang['help_template_type'] = 'The template type is used for organizational purposes, and for finding default contents when restoring the template to its default value (if any).  Templates belonging to a certain module type may be removed if the module is uninstalled.';
 $lang['help_tpl_created'] = 'This is the date that this template was initially created';
 $lang['help_tpl_modified'] = 'This is the date that this template was last modified';
+$lang['help_tpl_usage'] = 'This string can be inserted into a smarty template to use this template';
 $lang['help_type_createdate'] = 'The date that this template type was created in the database';
 $lang['help_type_descriptive_name'] = 'This is the name that will indicate this type in the template list, or in edit content';
 $lang['help_type_description'] = 'Specify a description for this content type.  This is useful to provide hints as to how this type is used, or other internal data.';
@@ -425,6 +426,7 @@ $lang['prompt_design'] = 'Design';
 $lang['prompt_designs'] = 'Designs';
 $lang['prompt_type'] = 'Type';
 $lang['prompt_unknown'] = 'Unknown';
+$lang['prompt_usage'] = 'Usage';
 $lang['prompt_user'] = 'User';
 $lang['prompt_view'] = 'View';
 $lang['prompt_with_selected'] = 'With Selected';
